@@ -12,8 +12,6 @@ analyze(
   to = NULL,
   dynamicRange = 80,
   silence = 0.04,
-  SPL_measured = 70,
-  Pref = 2e-05,
   windowLength = 50,
   step = NULL,
   overlap = 50,
@@ -22,6 +20,7 @@ analyze(
   cutFreq = NULL,
   nFormants = 3,
   formants = list(),
+  loudness = list(SPL_measured = 70, Pref = 2e-05),
   roughness = list(),
   novelty = list(input = "melspec", kernelLen = 100),
   pitchMethods = c("dom", "autocor"),
@@ -95,11 +94,6 @@ under maximum are treated as zero}
 amplitude below \code{silence * max_ampl adjusted by scale} are not
 analyzed at all.}
 
-\item{SPL_measured}{sound pressure level at which the sound is presented, dB
-(set to 0 to skip analyzing subjective loudness)}
-
-\item{Pref}{reference pressure, Pa}
-
 \item{windowLength}{length of FFT window, ms}
 
 \item{step}{you can override \code{overlap} by specifying FFT step, ms (NB:
@@ -128,6 +122,10 @@ formant analysis, NULL = as many as possible)}
 \item{formants}{a list of arguments passed to
 \code{\link[phonTools]{findformants}} - an external function called to
 perform LPC analysis}
+
+\item{loudness}{a list of parameters passed to \code{\link{getLoudness}} for
+measuring subjective loudness, namely \code{SPL_measured, Pref,
+spreadSpectrum}. NULL = skip loudness analysis}
 
 \item{roughness}{a list of parameters passed to
 \code{\link{modulationSpectrum}} for measuring roughness. NULL = skip
@@ -264,7 +262,7 @@ graphical parameters such as lwd, col, etc.}
 }
 \value{
 Returns a list with \code{$detailed} frame-by-frame descriptives and
-  a \code{$summary} with one row per file, as deterimined by
+  a \code{$summary} with one row per file, as determined by
   \code{summaryFun} (e.g., mean / median / SD of each acoustic variable
   across all STFT frames). Output measures include:
   \describe{\item{duration}{total duration, s}
@@ -281,7 +279,7 @@ Returns a list with \code{$detailed} frame-by-frame descriptives and
   nFormants formants per STFT frame, as calculated by
   phonTools::findformants} \item{harmEnergy}{the amount of energy in upper
   harmonics, namely the ratio of total spectral mass above 1.25 x F0 to the
-  total spectral mass below 1.25 x F0 (dB)}\item{harmHeight}{how high
+  total spectral mass below 1.25 x F0 (dB)} \item{harmHeight}{how high
   harmonics reach in the spectrum, based on the best guess at pitch (or the
   manually provided pitch values)} \item{HNR}{harmonics-to-noise ratio (dB),
   a measure of harmonicity returned by soundgen:::getPitchAutocor (see "Pitch
@@ -315,11 +313,11 @@ with these manual contours.
 }
 \details{
 Each pitch tracker is controlled by its own list of settings, as follows:
-\describe{\item{\code{pitchDom} (lowest dominant frequency band)} {\itemize{
+\describe{\item{\code{pitchDom} (lowest dominant frequency band)}{\itemize{
 \item\code{domThres} (0 to 1) to find the lowest dominant frequency band, we
 do short-term FFT and take the lowest frequency with amplitude at least
 domThres \item\code{domSmooth} the width of smoothing interval (Hz) for
-finding \code{dom}}} \item{\code{pitchAutocor} (autocorrelation)} {\itemize{
+finding \code{dom}}} \item{\code{pitchAutocor} (autocorrelation)}{\itemize{
 \item \code{autocorThres} voicing threshold (unitless, ~0 to 1)
 \item\code{autocorSmooth} the width of smoothing interval (in bins) for
 finding peaks in the autocorrelation function. Defaults to 7 for sampling
@@ -370,7 +368,7 @@ a = analyze(sound, samplingRate = 16000)
 a = analyze(sound, samplingRate = 16000,
   plot = FALSE,         # no plotting
   pitchMethods = NULL,  # no pitch tracking
-  SPL_measured = 0,     # no loudness analysis
+  loudness = NULL,      # no loudness analysis
   nFormants = 0         # no formant analysis
 )
 
@@ -437,10 +435,11 @@ a = analyze(sound1, 44100, ylim = c(0, 5),
 # Create 1 kHz tone
 samplingRate = 16000; dur_ms = 50
 sound3 = sin(2*pi*1000/samplingRate*(1:(dur_ms/1000*samplingRate)))
-a1 = analyze(sound3, samplingRate = samplingRate, windowLength = 25,
-        overlap = 50, SPL_measured = 40, scale = 1,
-        pitchMethods = NULL, plot = FALSE)
-a1$loudness  # loudness per STFT frame (1 sone by definition)
+a1 = analyze(sound3, samplingRate = samplingRate, scale = 1,
+             windowLength = 25, overlap = 50,
+             loudness = list(SPL_measured = 40),
+             pitchMethods = NULL, plot = FALSE)
+a1$detailed$loudness  # loudness per STFT frame (1 sone by definition)
 getLoudness(sound3, samplingRate = samplingRate, windowLength = 25,
             overlap = 50, SPL_measured = 40, scale = 1)$loudness
 a1$ampl  # RMS amplitude per STFT frame
@@ -449,15 +448,18 @@ getRMS(sound3, samplingRate = samplingRate, windowLength = 25,
 # or even simply: sqrt(mean(sound3 ^ 2))
 
 # The same sound as above, but with half the amplitude
-a_half = analyze(sound3 / 2, samplingRate = samplingRate, windowLength = 25,
-        overlap = 50, SPL_measured = 40, scale = 1,
-        pitchMethods = NULL, plot = FALSE)
-a1$ampl / a_half$ampl  # rms amplitude halved
-a1$loudness/ a_half$loudness  # loudness is not a linear function of amplitude
+a_half = analyze(sound3 / 2, samplingRate = samplingRate, scale = 1,
+                 windowLength = 25, overlap = 50,
+                 loudness = list(SPL_measured = 40),
+                 pitchMethods = NULL, plot = FALSE)
+a1$detailed$ampl / a_half$detailed$ampl  # rms amplitude halved
+a1$detailed$loudness/ a_half$detailed$loudness
+# loudness is not a linear function of amplitude
 
 # Amplitude & loudness of an existing audio file
 sound4 = '~/Downloads/temp/cry_451_soundgen.wav'
-a2 = analyze(sound4, windowLength = 25, overlap = 50, SPL_measured = 40)
+a2 = analyze(sound4, windowLength = 25, overlap = 50,
+             loudness = list(SPL_measured = 40))
 apply(a2[, c('loudness', 'ampl')], 2, median, na.rm = TRUE)
 median(getLoudness(sound4, windowLength = 25, overlap = 50,
                    SPL_measured = 40)$loudness)
