@@ -11,6 +11,7 @@ analyzeFrame(
   autoCorrelation = NULL,
   samplingRate,
   scaleCorrection,
+  loudness,
   cutFreq,
   trackPitch = TRUE,
   pitchMethods = c("dom", "autocor"),
@@ -32,6 +33,10 @@ analyzeFrame(
 (computationally more efficient than to do it here)}
 
 \item{samplingRate}{sampling rate (Hz)}
+
+\item{loudness}{a list of parameters passed to \code{\link{getLoudness}} for
+measuring subjective loudness, namely \code{SPL_measured, Pref,
+spreadSpectrum}. NULL = skip loudness analysis}
 
 \item{cutFreq}{if specified, spectral descriptives (peakFreq, specCentroid,
 specSlope, and quartiles) are calculated only between \code{cutFreq[1]} and
